--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -4,11 +4,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Present Grabber</title>
-
+		<link rel="stylesheet" type="text/css" href="/CSS/main.css">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.6/phaser.min.js"></script>
 		<script type="text/javascript" src="/js/Boot.js"></script>
 		<script type="text/javascript" src="/js/Preload.js"></script>
 		<script type="text/javascript" src="/js/MainMenu.js"></script>
+		<script type="text/javascript" src="/js/Gamefour.js"></script>
+		<script type="text/javascript" src="/js/Gamethree.js"></script>
 		<script type="text/javascript" src="/js/Gametwo.js"></script>
 		<script type="text/javascript" src="/js/Game.js"></script>
 
@@ -21,6 +23,9 @@
 	</head>
 
 	<body>
+		<nav style="position: absolute">
+			<a href="/"><img class="logo" src="/assets/images/wookiespecs.png"></a>
+		</nav>
 		<!-- include the main game file -->
 		<script src="/js/main.js"></script>
 	</body>
