--- a/public/HTML/splash.html
+++ b/public/HTML/splash.html
@@ -158,8 +158,8 @@
 		</div>
 	</div>
 <footer>
-	<p>Contact:<a href="mailto:someone@example.com">
-  Email Drewbacca</a></p>
+	<a href="mailto:someone@example.com">
+  Email Drewbacca</a>
 </footer>
 </body>
 	<audio autoplay>
