--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js" type="text/javascript"></script>
         <script src="/JS/angularSheet.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="/CSS/main.css">
+        <link rel="icon" href="/assets/images/wookiespecs.png">
     </head>
     <body ng-controller="mainController">
     <div class="container-fluid">
@@ -33,7 +34,7 @@
             <input type="password" ng-model="signupForm.password" placeholder="Password"/>
             <input type="submit"/>
         </form>
-        <script src="/js/main.js"></script>
+     
 
     </body>
 </html>
