--- a/public/HTML/splash.html
+++ b/public/HTML/splash.html
@@ -9,6 +9,9 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.6/phaser.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
 	<script src="/JS/angularSheet.js" type="text/javascript"></script>
+	<link rel="icon" href="/assets/images/wookiespecs.png">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 	
 </head>
 <body ng-controller = "mainController">
@@ -30,13 +33,12 @@
 		    <!-- nav links, forms, and other content -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class ="navhover navbox"><a href="/games">HOT games! <span class="sr-only">(current)</span></a></li>
-		        <li class ="navhover navbox"><a href="#">All Games</a></li>
-		      	<li class ="navhover navbox"><a href="#">Leaderboards</a></li>
+		        <li class ="navhover navbox"><a data-toggle="modal" data-target="#myModal">Games<span class="sr-only">(current)</span></a></li>
+		      	<li class ="navhover navbox"><a data-toggle="modal" data-target="#myModal">Leaderboards</a></li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
-	        		<li class="navhover navbox"><a href="#">Log In</a></li>
-	        		<li class="navhover navbox"><a href="#">Join the Fun</a></li>
+	        		<li class="navhover navbox"><a href="/register">Log In</a></li>
+	        		<li class="navhover navbox"><a href="/register">Join the Fun</a></li>
 	        	</ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -78,45 +80,45 @@
 							 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Arcade
 							 <span class="caret"></span></button>
 							 <ul class="dropdown-menu">
-							    <li><a href="/HTML/index.html">Present Grabber</a></li>
-							    <li><a href="#">Asteroids 2000</a></li>
-							    <li><a href="#">Steel Bullet</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Present Grabber</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Asteroids 2000</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Steel Bullet</a></li>
 							  </ul>
 						</div>
 						<div class="lineup dropdown">
 							 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Multiplayer
 							 <span class="caret"></span></button>
 							 <ul class="dropdown-menu">
-							    <li><a href="#">Tanks! For the Memories!</a></li>
-							    <li><a href="#">Squad of Subjugators</a></li>
-							    <li><a href="#">Billiard Monsters</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Tanks! For the Memories!</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Squad of Subjugators</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Billiard Monsters</a></li>
 							  </ul>
 						</div>
 						<div class="lineup dropdown">
 							<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">RPG
 							<span class="caret"></span></button>
 							<ul class="dropdown-menu">
-							    <li><a href="#">The Ancient Leaflets</a></li>
-							    <li><a href="#">Last Dream III</a></li>
-							    <li><a href="#">Obfuscation of MP</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">The Ancient Leaflets</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Last Dream III</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Obfuscation of MP</a></li>
 							</ul>
 						</div>
 						<div class="lineup dropdown">
 							<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Puzzle
 							<span class="caret"></span></button>
 							<ul class="dropdown-menu">
-							    <li><a href="#">Dr. Wario</a></li>
-							    <li><a href="#">Bedazzled</a></li>
-							    <li><a href="#">Legally Distinct Tetris Clone</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Dr. Wario</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Bedazzled</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Legally Distinct Tetris Clone</a></li>
 							</ul>
 						</div>
 						<div class="lineup dropdown">
 							<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Sports
 							<span class="caret"></span></button>
 							<ul class="dropdown-menu">
-							    <li><a href="#">Rob Baron's NFL</a></li>
-							    <li><a href="#">NBA Blams</a></li>
-							    <li><a href="#">Queen Latifah Soccer</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Rob Baron's NFL</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">NBA Blams</a></li>
+							    <li><a data-toggle="modal" data-target="#myModal">Queen Latifah Soccer</a></li>
 							</ul>
 						</div>
 					</div>
@@ -132,22 +134,22 @@
 						<div class="row">
 							<div class= "col-xs-3">
 								<div class="gamebox">
-								<h4>Present Grabber</h4><a href="/HTML/index.html"><img src="/assets/images/grabber-shot.png"></a>
+								<h4>Present Grabber</h4><a data-toggle="modal" data-target="#myModal"><img src="/assets/images/grabber-shot.png"></a>
 								</div>
 							</div>
 							<div class= "col-xs-3">
 								<div class="gamebox">
-								<h4>The Ancient Leaflets</h4><a href="/"><img src="/assets/images/daggerfall.jpg"></a>
+								<h4>The Ancient Leaflets</h4><a data-toggle="modal" data-target="#myModal"><img src="/assets/images/daggerfall.jpg"></a>
 								</div>
 							</div>
 							<div class= "col-xs-3">
 								<div class="gamebox">
-								<h4>Steel Bullet</h4><a href="/"><img src="/assets/images/slug.jpg"></a>
+								<h4>Steel Bullet</h4><a data-toggle="modal" data-target="#myModal"><img src="/assets/images/slug.jpg"></a>
 								</div>
 							</div>
 							<div class= "col-xs-3">
 								<div class="gamebox">
-								<h4>A Kid With Grabulator</h4><a href="/"><img src="/assets/images/blob.png"></a>
+								<h4>A Kid With Grabulator</h4><a data-toggle="modal" data-target="#myModal"><img src="/assets/images/blob.png"></a>
 								</div>
 							</div>
 							</ul>
@@ -157,12 +159,43 @@
 			</div>
 		</div>
 	</div>
-<footer>
+	<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog mod-bod">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header mod-head">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title"><img src="/assets/images/locke.gif"/> Drewbacca Games</h4>
+      </div>
+      <div class="modal-body backer">
+        <p>All of our games are 100% FREE!</p>
+        <p>Login to start playing now!</p>
+      </div>
+      <div class="modal-footer backer">
+      		<a href="/register"><button>Join the Fun</button></a>
+			<a href="/register"><button>Log In</button></a>
+        	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+<footer class="foot-right">
 	<a href="mailto:someone@example.com">
   Email Drewbacca</a>
+  <a class="btn btn-social-icon btn-twitter icon-space">
+    <span class="fa fa-twitter"></span>
+  </a>
+  <a class="btn btn-social-icon btn-facebook icon-space">
+    <span class="fa fa-facebook"></span>
+  </a>
 </footer>
 </body>
-	<audio autoplay>
-		<source src="/assets/audio/Chewbacca.mp3" type="audio/mpeg">
-	</audio>
+	<script>
+	$('#myModal').on('shown.bs.modal', function () {
+	  $('#myInput').focus()
+	})
+	</script>
 </html>
