--- a/hidden/games.html
+++ b/hidden/games.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="/CSS/main.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.6/phaser.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-    <script src="/JS/angularSheet.js" type="text/javascript"></script>
-    <script src="/JS/MainMenu.js" type="text/javascript"></script>
+    <script src="/js/angularSheet.js" type="text/javascript"></script>
+    <script src="/js/MainMenu.js" type="text/javascript"></script>
     <link rel="icon" href="/assets/images/wookiespecs.png">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
