--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js" type="text/javascript"></script>
-        <script src="/JS/angularSheet.js" type="text/javascript"></script>
+        <script src="/js/angularSheet.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="/CSS/main.css">
         <link rel="icon" href="/assets/images/wookiespecs.png">
     </head>
