--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="/js/Boot.js"></script>
 		<script type="text/javascript" src="/js/Preload.js"></script>
 		<script type="text/javascript" src="/js/MainMenu.js"></script>
-		<script type="text/javascript" src="/js/Gamefour.js"></script>
+		<script type="text/javascript" src="/js/gamefour.js"></script>
 		<script type="text/javascript" src="/js/gamethree.js"></script>
 		<script type="text/javascript" src="/js/Gametwo.js"></script>
 		<script type="text/javascript" src="/js/Game.js"></script>
