--- a/hidden/splash.html
+++ b/hidden/splash.html
@@ -63,9 +63,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="backer">
-					<p>Drewbacca Games are free to play, but you must be a member.</p>
-					<a href="/register"><button>Join the Fun</button></a>
-					<a href="/register"><button>Log In</button></a>
+					<p>Welcome Back!  Enjoy your FREE games!</p>
 				</div>
 			</div>
 		</div>
@@ -80,7 +78,7 @@
 							 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Arcade
 							 <span class="caret"></span></button>
 							 <ul class="dropdown-menu">
-							    <li><a href="#">Present Grabber</a></li>
+							    <li><a href="/HTML/index.html">Present Grabber</a></li>
 							    <li><a href="#">Asteroids 2000</a></li>
 							    <li><a href="#">Steel Bullet</a></li>
 							  </ul>
