--- a/hidden/leaderboard.html
+++ b/hidden/leaderboard.html
@@ -51,21 +51,12 @@
             </div>
         </div>
     </div>
-    <div class="container">
+  <div class="container">
       <div class="row">
             <h2>Present Grabber</h2>
         <div ng-repeat = "scores in scoreBox" class="col-xs-12">
             <h3 class="game-head">{{scores.name}} --- {{scores.score}}</h3>
         </div>
     </div>
-<footer class="foot-right">
-    <a href="mailto:someone@example.com">
-  Email Drewbacca</a>
-  <a class="btn btn-social-icon btn-twitter icon-space">
-    <span class="fa fa-twitter"></span>
-  </a>
-  <a class="btn btn-social-icon btn-facebook icon-space">
-    <span class="fa fa-facebook"></span>
-  </a>
-</footer>
+  </div>
 </body>
