--- a/public/HTML/oops.html
+++ b/public/HTML/oops.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="/CSS/main.css">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.6/phaser.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-	<script src="/JS/angularSheet.js" type="text/javascript"></script>
+	<script src="/js/angularSheet.js" type="text/javascript"></script>
 	<link rel="icon" href="/assets/images/wookiespecs.png">
 	
 </head>
