--- a/hidden/profile.html
+++ b/hidden/profile.html
@@ -37,7 +37,7 @@
                 <li class ="navhover navbox"><a href="/leaders">High Scores</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                    <li class="navhover navbox"><a href="/profile">Profile</a></li>
+                    <li class="navhover navbox"><a href="/profile">Community</a></li>
                     <li class="navhover navbox"><a href="/logout">Log Out</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
